# StreamingLivingPush

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  agconnect-services.json  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/living/streamlivingpush/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log-android.h  native-interfaces.c  packt.h
app/src/main/java/com/activity/base/: BasePushActivity.kt  MainActivity.kt
app/src/main/java/com/common/base/: BaseCapture.kt  EventBusMsg.kt  RecordType.kt
app/src/main/java/com/encoder/: AudioConfigUtils.java  AudioEncoder.kt  AudioSoftEncoder.kt  AudioSpecificConfig.java  VideoEncoder.kt  VideoSoftEncoder.kt
app/src/main/java/com/encoder/utils/: ImgTransJavaUtils.java  ImgTransUtils.java  ImgTransUtils.kt
app/src/main/java/com/living/streamlivingpush/: AppApplication.kt  MainActivity.kt  StreamPushInstance.kt
app/src/main/java/com/opencv/: OpenCvFaceCheckTool.kt  OpenCvTestActivity.kt  PointTransUtils.kt
app/src/main/java/com/play/: ArrowDrawFilter.kt  PostDrawFilter.kt
app/src/main/java/com/push/tool/: DataFrame.kt
app/src/main/res/layout/: activity_main.xml  activity_opencv_test.xml  activity_usb_aoa.xml  view_debug_floatwindow.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: aoa_accessory_filter.xml
faac/: build.gradle
rtmp/src/main/jni/: CMakeLists.txt
rtmp/src/main/jni/librtmp/: CMakeLists.txt
rtmp/src/main/jni/rtmp/: packt.h  rtmpinterfaces.c  tools.h
(+165 files in other folders)
